# icedrive-templates

./: README.md  pyproject.toml  run_icestorm
config/: authentication.config  blob.config  directory.config  icebox.config
icedrive_authentication/: app.py  authentication.py  delayed_response.py  discovery.py  icedrive.ice
icedrive_blob/: __init__.py  app.py  blob.py  delayed_response.py  icedrive.ice
icedrive_directory/: app.py  delayed_response.py  directory.py  icedrive.ice
